# InformationAgency

./: .envsample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test_indexing_api.py  xpanes.sh
docs/diagrams/: indexing.mmd  search.mmd
indexing/: document_classifier.py  metadata_extractor.py  models.py  settings.py  utils.py
infra/: docker-compose.yaml
orchestrator/: api.py
scripts/: reset-docker.sh  restart-orchestrator.sh
storage/: minio_client.py  opensearch_client.py  opensearch_mappings.py  qdrant_client.py  settings.py
tests/: test_search_api.py
